deploy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: senior-accounts
spec:
  selector:
    matchLabels:
      app: senior-accounts
  template:
    metadata:
      labels:
        app: senior-accounts
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: rails
          image: quay.io/realliance/senior-accounts:20210126151254@sha256:0cbfa9fc2b4cc7136e8c5baf6a5d7f1b54c50ada0e036d1dc7c118b7598b11d7
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: senior-accounts
spec:
  selector:
    app: senior-accounts
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
