deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: senior-accounts
spec:
  rules:
    - host: accounts.senior.realliance.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: senior-accounts
                port:
                  number: 80
  tls:
    - hosts:
        - accounts.senior.realliance.net
      secretName: accounts-senior-tls
